--- a/completed/MapApp/Info.plist
+++ b/completed/MapApp/Info.plist
@@ -34,5 +34,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>I want your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>to educate you</string>
 </dict>
 </plist>
